# sqlx-odbc

./: Cargo.toml  Containerfile.dev  compose.dev.yaml
.github/: copilot-instructions.md
sqlx-odbc/: Cargo.toml
sqlx-odbc-core/: .gitignore  Cargo.toml
sqlx-odbc-core/src/: lib.rs
sqlx-odbc-core/src/odbc/: arguments.rs  column.rs  database.rs  error.rs  mod.rs  options.rs  query.rs  query_result.rs  row.rs  statement.rs  transaction.rs  type_info.rs  value.rs
sqlx-odbc-core/src/odbc/connection/: executor.rs  mod.rs
sqlx-odbc-core/src/odbc/mssql/: migrate.rs  mod.rs
sqlx-odbc-core/src/odbc/postgres/: migrate.rs  mod.rs
sqlx-odbc-core/src/odbc/types/: mod.rs
sqlx-odbc-core/tests/: connection_tests.rs
sqlx-odbc-macros/: Cargo.toml
sqlx-odbc-macros/src/: from_row.rs  lib.rs  query.rs
sqlx-odbc/src/: lib.rs  macros.rs
sqlx-odbc/tests/: connection_tests.rs
