[package]
name = "sqlx-odbc"
version = "0.1.0"
edition = "2024"

[dependencies]
odbc-api = "20.1.0"
sqlx-core = "0.8.6"
futures-core = "0.3"
futures-util = "0.3"
log = "0.4"
tokio = { version = "1", features = ["rt", "sync"] }
async-stream = "0.3"

[features]
default = []
mssql-migrate = ["sqlx-core/migrate", "crc"]
postgres-migrate = ["sqlx-core/migrate", "crc"]
offline = ["serde"]
serde = ["dep:serde"]

[dependencies.crc]
version = "3.0"
optional = true

[dependencies.serde]
version = "1.0"
optional = true

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
