[package]
name = "sqlx-odbc"
documentation = "https://docs.rs/sqlx-odbc"
description = "SQLx ODBC driver - async database access for any ODBC-compatible database"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
license = { workspace = true }

[package.metadata.docs.rs]
features = ["macros", "query", "mssql-migrate", "postgres-migrate"]

[dependencies]
sqlx-odbc-core = { path = "../sqlx-odbc-core", version = "=0.1.0" }
sqlx-odbc-macros = { path = "../sqlx-odbc-macros", version = "=0.1.0", optional = true }

[features]
default = []

# Macro features
macros = ["derive"]
derive = ["dep:sqlx-odbc-macros", "sqlx-odbc-macros/derive"]
query = ["dep:sqlx-odbc-macros", "sqlx-odbc-macros/query"]

# Database-specific migration features (pass through to core)
mssql-migrate = ["sqlx-odbc-core/mssql-migrate"]
postgres-migrate = ["sqlx-odbc-core/postgres-migrate"]

# Serialization support
offline = ["sqlx-odbc-core/offline"]
serde = ["sqlx-odbc-core/serde"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[lints.clippy]
duplicated_attributes = "allow"
